--- a/index.html
+++ b/index.html
@@ -296,6 +296,10 @@
                 <img src="images/image1.jpg" alt="Image 1">
                 <img src="images/image2.jpg" alt="Image 2">
                 <img src="images/image3.jpg" alt="Image 3">
+                <img src="images/image4.jpg" alt="Image 4">
+                <img src="images/image5.jpg" alt="Image 5">
+                <img src="images/image6.jpg" alt="Image 6">
+                <img src="images/image7.jpg" alt="Image 7">
             </div>
             <button id="next" class="carousel-btn">❯</button>
         </div>
