--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap" rel="stylesheet">
     <style>
+
+        a {
+            text-decoration: none; /* Supprimer le soulignement des liens */
+        }
+
         /* Thème bleu modernisé avec effet parallax */
         body {
             font-family: 'Raleway', sans-serif;
@@ -220,8 +225,8 @@
             <li><a href="#about-me">Présentation</a></li>
             <li><a href="#projects">Projets</a></li>
             <li><a href="#carousel-section">Carrousel</a></li>
-            <li><a href="">Spécialté</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="specialite.html">Spécialté</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
 
@@ -263,28 +268,35 @@
             </div>       
             </section>
 
-    <section id="projects" class="content-section">
-        
-        <h2>Mes Projets</h2>
-        <div class="cards-container">
-            <div class="card">
-                <h3>Projet 1</h3>
-                <p>Une description du premier projet...</p>
-            </div>
-            <div class="card">
-                <h3>Projet 2</h3>
-                <p>Une description du deuxième projet...</p>
-            </div>
-            <div class="card">
-                <h3>Projet 3</h3>
-                <p>Une description du troisième projet...</p>
-            </div>
-            <div class="card">
-                <h3>Projet 4</h3>
-                <p>Une description du troisième projet...</p>
-            </div>
-        </div>
-    </section>
+            <section id="projects" class="content-section">
+                <h2>Mes Projets</h2>
+                <div class="cards-container">
+                    <a href="project1.html" class="card">
+                        <h3>Projet 1 : Piloter un projet Informatique</h3>
+                        <p>Objectifs : « informatiser une clinique de campagne »</p>
+                        <br><br><br><br><br><br>
+                        <p>cliquez sur la carte pour avoir plus de détail</p>
+                    </a>
+                    <a href="project2.html" class="card">
+                        <h3>Projet 2 : Voir plus loin</h3>
+                        <p>Voyage à Paris afin de visiter des écoles d'ingénieur</p>
+                        <br><br><br><br><br><br><br>
+                        <p>cliquez sur la carte pour avoir plus de détail</p>
+                    </a>
+                    <a href="project1.html" class="card">
+                        <h3>Projet 3</h3>
+                        <p>Une description du troisième projet...</p>
+                        <br><br><br><br><br><br><br><br>
+                        <p>cliquez sur la carte pour avoir plus de détail</p>
+                    </a>
+                    <a href="project1.html" class="card">
+                        <h3>Projet 4</h3>
+                        <p>Une description du quatrième projet...</p>
+                        <br><br><br><br><br><br><br><br>
+                        <p>cliquez sur la carte pour avoir plus de détail</p>
+                    </a>
+                </div>
+            </section>
 
 
 
