--- a/index.html
+++ b/index.html
@@ -283,22 +283,16 @@
                         <br><br><br><br><br><br><br>
                         <p>cliquez sur la carte pour avoir plus de détail</p>
                     </a>
-                    <a href="project1.html" class="card">
+                    <a href="project3.html" class="card">
                         <h3>Projet 3</h3>
-                        <p>Une description du troisième projet...</p>
-                        <br><br><br><br><br><br><br><br>
-                        <p>cliquez sur la carte pour avoir plus de détail</p>
-                    </a>
-                    <a href="project1.html" class="card">
-                        <h3>Projet 4</h3>
-                        <p>Une description du quatrième projet...</p>
-                        <br><br><br><br><br><br><br><br>
-                        <p>cliquez sur la carte pour avoir plus de détail</p>
+                        <p>Projet 3 : Concevoir, réaliser et présenter une solution technique</p>
+                        <br><br><br><br><br><br><br>
+                        <p>Céer une infrastructure informatique d'entreprise</p>
                     </a>
                 </div>
             </section>
 
-
+            
 
     <!-- Section du carrousel -->
     <section id="carousel-section">
